compiler-core/src/parse/snapshots/gleam_core__parse__tests__unicode_ideographic_full_stop.snap
---
source: compiler-core/src/parse/tests.rs
assertion_line: 2297
expression: "pub fn main() { io。println(\"hi\") }"
snapshot_kind: text
---
----- SOURCE CODE
pub fn main() { io。println("hi") }

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:19
  │
1 │ pub fn main() { io。println("hi") }
  │                   ^^ Unexpected character

This looks like ascii dot, but it is actually the unicode ideographic full
stop.
